--- a/index.html
+++ b/index.html
@@ -2,8 +2,39 @@
 <html>
 <head>
 	<title>Profil Sekolah</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-
+	<header>
+		<div class="container">
+			<div class="header-left">
+				<a href="">SMK NEGERI 7</a>
+			</div>
+			<form>
+				<input type="text" name="" placeholder="Search...">
+			</form>
+			<div class="pilihan">
+				<ul>
+					<li><a href="">Artiker</a></li>
+					<li><a href="">Berita</a></li>
+					<li><a href="">Profil</a></li>
+					<li><a href="">Home</a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+	<div class="top-wrapper">
+		<div class="container">
+			<h1>SMK NEGERI 7 SAMARINDA</h1>
+			<p>Smk Negeri 7 merupakan sekolah yang beralamatkan Jln. Aminah Syukur No 82 Samarinda-Kaltim. </p>
+			<p>Sekolah ini mempunyai beberapa jurusan yaitu <a href="">MM</a>, <a href="">TKJ</a> dan <a href="">RPL</a></p>
+			<div class="link-wrapper">
+			    <a href="#" class="btn instagram">Instagram</a>
+			    <a href="#" class="btn facebook">Facebook</a>
+			    <a href="#" class="btn twitter">Twitter</a>
+			    <a href="#" class="btn discord">Discord</a>
+		        </div>
+		</div>
+	</div>
 </body>
 </html>
