--- a/body.html
+++ b/body.html
@@ -1,4 +1,12 @@
-<div class="main">
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="body.css">
+</head>
+<body>
+
+  <div class="main">
     <div class="container">
       <div class="pala">
         <h2>Jurusan</h2>
@@ -25,3 +33,6 @@
         </div>
     </div>
   </div>
+
+</body>
+</html>
