--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
 	  	</div>
 	</div>
 </div>
+		<footer>
+		<div class="container">
+		<img src="Logo_SMKN_7_Samarinda.PNG">
+	</div>
+	<li><a href="#">Kontak</a></li>
+        <li><a href="#">Tentang</a></li>
+        <li><a href="#">Copyright</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Sitemap</a></li>
+	</footer>
 </body>
 </html>
